--- a/package.json
+++ b/package.json
@@ -3,16 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.1",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.19.7",
+    "@types/plotly.js": "^1.54.2",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
+    "@types/react-plotly.js": "^2.2.4",
+    "@types/react-router-dom": "^5.1.6",
+    "@types/styled-components": "^5.1.4",
+    "data-forge": "^1.8.12",
+    "dotenv": "^8.2.0",
+    "eslint-config-prettier": "^6.15.0",
+    "plotly.js": "^1.57.1",
+    "prettier": "^2.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-plotly.js": "^2.5.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "rxjs": "^6.6.3",
+    "styled-components": "^5.2.1",
     "typescript": "^4.1.2",
     "web-vitals": "^0.2.4"
   },
@@ -25,7 +40,8 @@
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
+      "react-app/jest",
+      "prettier"
     ]
   },
   "browserslist": {
