--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
-# If you want to change any value in this file only for LOCAL developement, then create .env.development.local
+# If you want to change any value in this file only for LOCAL development, then create .env.development.local
 
 REACT_APP_USE_DUMMY_API=false
 REACT_APP_BACKEND_API_URL=http://127.0.0.1:4000
