--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-plotly.js": "^2.5.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-wordcloud": "^1.2.7",
     "rxjs": "^6.6.3",
     "styled-components": "^5.2.1",
     "typescript": "^4.1.3",
