--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^8.2.0",
     "plotly.js": "^1.58.4",
     "prettier": "^2.2.1",
+    "random-words": "^1.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-plotly.js": "^2.5.1",
