--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
 REACT_APP_USE_DUMMY_API=false
-REACT_APP_BACKEND_API_URL=http://3.236.56.183:30042
+REACT_APP_BACKEND_API_URL=https://api-politicians.embedd.ml
