--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,3 @@
 REACT_APP_USE_DUMMY_API=false
 REACT_APP_BACKEND_API_URL=https://api-politicians.embedd.ml
+REACT_APP_BACKEND_WSS_URL=wss://api-politicians.embedd.ml
